--- a/html/index.html
+++ b/html/index.html
@@ -17,5 +17,7 @@
 orking. Further configuration is required.</p>
 <h2>不会linux是硬伤。。。终于搞好了</h2>
 <h3>20180826</h3>
+<h2>尝试搞一套本地发线上</h2>
+<h3>20180830</h3>
 </body>
 </html>
