--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Welcome to nginx!</title>
+<title>new website</title>
 <style>
     body {
         width: 35em;
@@ -12,9 +12,9 @@
 </style>
 </head>
 <body>
-<h1>Welcome to nginx!</h1>
-<p>If you see this page, the nginx web server is successfully installed and
-orking. Further configuration is required.</p>
+
+<h1>Welcome to my space</h1>
+
 <h2>不会linux是硬伤。。。终于搞好了</h2>
 <h3>20180826</h3>
 <h2>尝试搞一套本地发线上</h2>
