--- a/html/index.html
+++ b/html/index.html
@@ -5,9 +5,11 @@
 <title>new website</title>
 <style>
     body {
-        width: 35em;
         margin: 0 auto;
-        font-family: Tahoma, Verdana, Arial, sans-serif;
+        font-family: "ms 雅黑";
+    }
+    h3{
+        margin-top: 20px;
     }
 </style>
 </head>
