--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>new website</title>
 <style>
+    h2,h3{
+        margin: 0;
+        padding: 0;
+    }
     body {
         margin: 0 auto;
         font-family: "ms 雅黑";
